<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthenticationActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dp_25"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_welcome"
            android:text="@string/hey_there"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/hey_there" />


        <TextView
            android:id="@+id/create_an_account"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/create_an_account_to_get_started"
            app:layout_constraintStart_toStartOf="@id/text_welcome"
            app:layout_constraintTop_toBottomOf="@id/text_welcome" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginBottom="@dimen/dp_25"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_an_account">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingVertical="14dp"
                android:paddingStart="@dimen/dp_25"
                android:paddingEnd="31dp"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:background="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_edit_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingVertical="14dp"
                android:paddingStart="@dimen/dp_25"
                android:paddingEnd="31dp"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginBottom="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/sign_in_background"
            android:text="@string/sign_in"
            android:textColor="@color/purple"
            app:layout_constraintBottom_toBottomOf="@id/no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/no_account"
            app:layout_constraintTop_toTopOf="@id/no_account" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/loader"
        android:visibility="gone"
        layout="@layout/view_loader"/>
</FrameLayout>