<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="SpUsage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_header"
            style="@style/hey_there"
            android:text="@string/hey_there"
            android:layout_marginTop="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/dp_25" />
        <TextView
            android:id="@+id/text_prompt"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_25"
            android:text="@string/enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginBottom="@dimen/dp_25"
            app:hintEnabled="false"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_25"
            app:layout_constraintBottom_toTopOf="@+id/btn_reset_link"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_prompt">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingVertical="14dp"
                android:paddingStart="@dimen/dp_25"
                android:paddingEnd="31dp"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_link"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dp_25"
            android:layout_marginTop="32dp"
            android:text="@string/send_link_to_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loader"
        layout="@layout/view_loader"
        android:visibility="gone"
        tools:visibility="gone" />
</FrameLayout>